# fleet

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  fleet.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ADOPTING.md  HONESTY.md  PROGRESS-MANIFEST.md  PROVIDERS.md
engine/: actions.py  collector.py  deep.py  oscompat.py  progress.py  roster.py  server.py  vault.py  verify.py
engine/providers/: __init__.py  _geminish.py  base.py  claude.py  codex.py  gemini.py  qwen.py
engine/ui/: app.css  app.js  theme.css
engine/ui/fonts/: fonts.css
engine/vault_skeleton/: .gitignore  CLAUDE.md
engine/vault_skeleton/.obsidian/: app.json
engine/vault_skeleton/_templates/: entity.md  source.md
engine/vault_skeleton/wiki/: index.md  log.md  overview.md
scripts/: grep_gate.py
tests/: conftest.py  test_actions.py  test_collector.py  test_deep.py  test_init.py  test_init_vault.py  test_oscompat.py  test_packaging.py  test_progress.py  test_providers_codex.py  test_providers_gemini.py  test_providers_qwen.py  test_roster.py  test_server.py  test_vault.py  test_verify.py
tests/fixtures/: transcript.jsonl
ui/: app.css  app.js  index.html  theme.js
vault_skeleton/.raw/: README.md
vault_skeleton/_templates/: concept.md
vault_skeleton/wiki/: hot.md
vault_skeleton/wiki/general/: _index.md
vault_skeleton/wiki/meta/: conventions.md
