[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-cc"
version = "0.1.0"
description = "See, supervise, and inspect every running Claude Code session from one local window."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dogma Labs" }]
keywords = ["claude", "claude-code", "monitor", "dashboard", "tui", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
]
dependencies = ["psutil>=5.9"]

[project.urls]
Homepage = "https://github.com/DogmaLabsTech/fleet"
Repository = "https://github.com/DogmaLabsTech/fleet"
Issues = "https://github.com/DogmaLabsTech/fleet/issues"

[project.optional-dependencies]
app = ["pywebview>=4.4"]

[project.scripts]
fleet = "fleet:main"

[tool.setuptools]
packages = ["engine"]
py-modules = ["fleet", "app"]
# engine/ui and engine/vault_skeleton (incl. dotfiles + binary fonts) ship via
# `graft` in MANIFEST.in; glob package-data would silently drop dotfiles/binaries.
include-package-data = true
